# sbisolet

./: .gitignore  Bonuses.cpp  CMakeLists.txt  LICENSE  main.cpp  sbisolet.pro
arduino_part/not_working_accel/: not_working_accel.ino
arduino_part/working_gyro/: working_gyro.ino
qsfml/: mainwindow.cpp  mainwindow.h  mycanvas.h  qsfml.pro
src/: Bonuses.cpp  Bonuses.h  Camera.cpp  Camera.h  Circle.cpp  Circle.h  CollisionUtils.cpp  CollisionUtils.h  Config.h  GameObject.cpp  GameObject.h  Plane.cpp  Plane.h  Scene.cpp  Scene.h  Segment.cpp  Segment.h  SkyEffect.cpp  SkyEffect.h  Sounds.cpp  Sounds.h  UI.cpp  UI.h  Utils.cpp  Utils.h  precomp.h  terrain.cpp  terrain.h
src/Enemies/: Balloon.cpp  Balloon.h  Cloud.cpp  Cloud.h  Enemies.cpp  Enemies.h  Kamikaze.cpp  Kamikaze.h
terminal/: Command.cpp  glwidget.h  logo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  terminal.pro  triangle.cpp  triangle.h  window.cpp  window.h
ui/: command.cpp  command.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycanvas.cpp  mycanvas.h  qtsfmlcanvas.cpp  qtsfmlcanvas.h  settingsdialog.cpp  settingsdialog.h
